<resources>
    <string name="app_name">Download</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download">Download</string>
    <string name="downloading">We are downloading your file!</string>
    <string name="glide">Glide-Image Loading Library by BumpTech</string>
    <string name="load">LoadApp-Current repository by Udacity</string>
    <string name="retrofit">Retrofit-Type-safe HTTP client for Android and Java by Square</string>

    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    network_error
    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="select">Please select a file you with to downlaod</string>
    <string name="network_error">Network Error</string>

    <string name="download_channel_id">dwn_chanel</string>
    <string name="download_channel_name">Downloads</string>
    <string name="notification_channel_description">Download status</string>
    <string name="status">Status</string>
    <string name="status_placeholder">Correct</string>
    <string name="go_back">Go back</string>

</resources>