<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_download"
            android:src="@drawable/ic_download"
            />

        <RadioGroup
            android:id="@+id/linksList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/loadingButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <RadioButton
                android:id="@+id/glide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/glide"

                />

            <RadioButton
                android:id="@+id/load"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/load" />

            <RadioButton
                android:id="@+id/retrofit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retrofit" />
        </RadioGroup>

        <com.example.download.custom.LoadingButton
            android:id="@+id/loadingButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Download"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>